--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body> 
     <!-- Información del encabezado -->
     <header>
+        <h1>Eider Arboleda</h1>
         <div class="logo-titulo">
             <img id="icono1" src="imagenes/download.png" alt="Soluciones">       <!-- Imagen del logo de la empresa con un identificador único (id). -->
             <h1 id="superior">SALOGITECH</h1>                                    <!-- Título de la empresa con un identificador único (id) para estilo personalizado. -->
