--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">                                                <!-- Especifica la codificación de caracteres como UTF-8 para soportar caracteres especiales. -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Configura la visualización para adaptarse a diferentes tamaños de pantalla, esencial para el diseño responsivo. -->
-    <title>Neyi Narvaez</title>                                            <!-- Título de la página que aparecerá en la pestaña del navegador. -->
+    <title>Eider Arboleda</title>                                            <!-- Título de la página que aparecerá en la pestaña del navegador. -->
     <link rel="stylesheet" href="estilos.css">                             <!-- Vincula una hoja de estilo CSS externa para el diseño y la apariencia de la página. -->
 </head>
 
 <body> 
     <!-- Información del encabezado -->
     <header>
-        <h1>Eider Arboleda</h1>
+        <h1>Eider Arboleda - Jesid Villota</h1>
         <div class="logo-titulo">
             <img id="icono1" src="imagenes/download.png" alt="Soluciones">       <!-- Imagen del logo de la empresa con un identificador único (id). -->
-            <h1 id="superior">SALOGITECH</h1>                                    <!-- Título de la empresa con un identificador único (id) para estilo personalizado. -->
+            <h1 id="superior">NOTICIAS DE ULTIMA HORA</h1>                                    <!-- Título de la empresa con un identificador único (id) para estilo personalizado. -->
         </div>
         <nav class="navbar">  
             <ul class="menu">                                                    <!-- Lista no ordenada para el menú de navegación principal. -->
@@ -42,26 +42,30 @@
         <div class="slides"> <!-- Contenedor de las diapositivas del slider. -->
             <!-- Primera diapositiva del slider -->
             <div class="slide first"> 
-                <img src="./Imagenes/noticias.png" alt="Noticia 1"> <!-- Imagen para la primera diapositiva. -->
+                <img src="https://estaticos.elcolombiano.com/binrepository/1005x566/0c0/780d565/none/11101/TYHY/aeropuerto-barcelona-dana_46446124_20241104093931.jpg" alt="Noticia 1"> <!-- Imagen para la primera diapositiva. -->
                 <div class="caption"> <!-- Contenedor de texto que acompaña la imagen. -->
-                    <h2>Título de la Noticia 1</h2>
-                    <p>Descripción breve de la noticia 1...</p>
+                    <h2>Los efectos de la DANA en España causan ahora estragos en Barcelona: hasta la pista del aeropuerto se inundó </h2>
+                    <p>La Agencia Estatal de Meteorología (AEMET) emitió una alerta roja para Barcelona por el “peligro extremo por lluvias torrenciales” y recomendó “no viajar si no es estrictamente necesario”. Se convierte así esta ciudad en la última región de España impactada por las condiciones meteorológicas causadas por la DANA.
+
+                        Las lluvias torrenciales que han caído desde la madrugada sobre Barcelona y que usuarios en redes sociales han registrado con preocupación hicieron que se cancelara el tráfico de trenes de cercanías y se retrasara la movilidad del tren de alta velocidad entre la ciudad y Madrid.</p>
                 </div>
             </div>
             <!-- Segunda diapositiva del slider -->
             <div class="slide">
-                <img src="./Imagenes/not2.png" alt="Noticia 2"> <!-- Imagen para la segunda diapositiva. -->
+                <img src="https://www.semana.com/resizer/v2/F7USA4PTRZE3LHVBP2VHOJZZ3E.jpeg?auth=e75951591e0b14267411c4dd20ec839bd26c1965b45d0c5c015e6417b4495ac2&smart=true&quality=75&width=1280&height=720" alt="Noticia 2"> <!-- Imagen para la segunda diapositiva. -->
                 <div class="caption">
-                    <h2>Título de la Noticia 2</h2>
-                    <p>Descripción breve de la noticia 2...</p>
+                    <h2>Nasa revela impresionantes imágenes del antes y después del paso de la dana por territorio español</h2>
+                    <p>La Nasa publicó por medio de sus redes sociales las imágenes comparativas entre el mes de octubre 2022 y de 2024, de la Comunidad Valenciana, que vivió el paso de dana la semana pasada.
+
+                        Por medio de la utilización del satélite Landsat 8, la institución mostró la verdadera dimensión de la tragedia y el gran avance que tuvieron las aguas en las localidades afectadas por el fenómeno natural.</p>
                 </div>
             </div>
             <!-- Tercera diapositiva del slider -->
             <div class="slide">
-                <img src="./Imagenes/not3.png" alt="Noticia 3"> <!-- Imagen para la tercera diapositiva. -->
+                <img src="https://d2yoo3qu6vrk5d.cloudfront.net/pulzo-lite/images-resized/PP4066361-s-o.webp" alt="Noticia 3"> <!-- Imagen para la tercera diapositiva. -->
                 <div class="caption">
-                    <h2>Título de la Noticia 3</h2>
-                    <p>Descripción breve de la noticia 3...</p>
+                    <h2>Colombiano vive drama por la Dana en España; jefe lo obligó a trabajar y caminar por horas</h2>
+                    <p>En España aún se respira humedad y el olor a lodo permanece, pues la Dana que golpeó dicho país el 29 de octubre causó estragos y los daños siguen siendo visibles en diferentes sectores. Valencia fue la primera ciudad que sintió el golpe, mientras que Tarragona y Barcelona sufrieron el coletazo en la madrugada de este lunes.</p>
                 </div>
             </div>
         </div>
@@ -85,16 +89,14 @@
     <main>
         <section class="texto-imagen"> <!-- Sección que contiene texto e imágenes. -->
             <div class="texto"> <!-- Contenedor para el texto explicativo. -->
-                <h2>Bienvenido a soluciones Tecnológicas</h2> <!-- Encabezado de bienvenida. -->
-                <p>Impulsamos tu negocio con soluciones tecnológicas personalizadas. Ofrecemos desarrollo de software, consultoría IT y 
-                    ciberseguridad a medida, diseñados para optimizar tus procesos, proteger tu información y llevar tu empresa al siguiente nivel.</p>
+                <h2>Bienvenido a las noticias mas importantes del dia en el mundo</h2> <!-- Encabezado de bienvenida. -->
+                <p>Aqui se informara de las notiias mas importantes de la actualidad y que estan conmocionando a la humanidad </p>
                 <br>
-                <h2>Ventajas</h2>
+                <h2>Noticias relevantes</h2>
                 <ol> <!-- Lista ordenada que enumera las ventajas ofrecidas por la empresa. -->
-                    <li>Soluciones tecnológicas personalizadas.</li>
-                    <li>Mejorar procesos y seguridad a través de la tecnología.</li>
-                    <li>Optimización de procesos, protección de datos y mejora de la competitividad.</li>
-                    <li>"Soluciones a medida" que se adaptan a las necesidades específicas de cada cliente.</li>
+                    <li>Los efectos de la DANA en España causan ahora estragos en Barcelona: hasta la pista del aeropuerto se inundó</li>
+                    <li>Nasa revela impresionantes imágenes del antes y después del paso de la dana por territorio español</li>
+                    <li>Colombiano vive drama por la Dana en España; jefe lo obligó a trabajar y caminar por horas</li>
                 </ol>
             </div>
             <div class="image-container"> <!-- Contenedor para la imagen que acompaña al texto. -->
