--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <h1>Eider Arboleda - Jesid Villota</h1>
         <div class="logo-titulo">
-            <img id="icono1" src="imagenes/download.png" alt="Soluciones">       <!-- Imagen del logo de la empresa con un identificador único (id). -->
+            <img id="icono1" src="https://static.vecteezy.com/system/resources/previews/007/539/914/non_2x/news-logo-design-vector.jpg" alt="Soluciones">       <!-- Imagen del logo de la empresa con un identificador único (id). -->
             <h1 id="superior">NOTICIAS DE ULTIMA HORA</h1>                                    <!-- Título de la empresa con un identificador único (id) para estilo personalizado. -->
         </div>
         <nav class="navbar">  
@@ -100,7 +100,7 @@
                 </ol>
             </div>
             <div class="image-container"> <!-- Contenedor para la imagen que acompaña al texto. -->
-                <img src="imagenes/desarrollo.png" alt="Soluciones"> <!-- Imagen representativa de los servicios de la empresa. -->
+                <img src="https://img.freepik.com/vector-premium/concepto-noticias-mundiales-ilustracion-globo-vectorial-tema-periodistico-noticias-vivo_570429-18111.jpg?semt=ais_hybrid" alt="Soluciones"> <!-- Imagen representativa de los servicios de la empresa. -->
             </div>
             <br><br>
  
